# platanus-hack-25-team-20

./: .gitignore  README.md  docker-compose.app.yml  docker-compose.yml  package-lock.json  platanus-hack-project.json  project-description.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test.db
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/admin/: admin.py
backend/app/database/: models.py  setup.py
backend/app/routers/: application_router.py  cv_router.py  extraction_router.py  job_offering_router.py  project_router.py  template_router.py  user_profile_router.py  user_router.py  user_skills_router.py
backend/app/schemas/: application_schema.py  cv_schema.py  extraction_schema.py  job_offering_schema.py  project_schema.py  template_schema.py  user_profile_schema.py  user_schema.py  user_skills_schema.py
backend/app/services/: application_service.py  cv_service.py  extraction_service.py  job_offering_service.py  llm_service.py  project_service.py  template_service.py  user_profile_service.py  user_service.py  user_skills_service.py
backend/scripts/: README.md  demo_llm.py  job_offerings_final.json  reset_users.py  seed_all.py  seed_job_offerings.py  seed_templates.py  test_extraction_e2e.py  test_extraction_simple.py  test_render.py
backend/templates/: .gitignore  modern-cv.typ  simple-cv.typ
backend/tests/: __init__.py  conftest.py  test_application.py  test_cv.py  test_job_offering.py  test_project.py  test_template.py  test_user.py  test_user_profile.py  test_user_skills.py
(+68 files in other folders)
